2002-07-25  Han-Wen  <hanwen@cs.uu.nl>

	* server.el.patch: new file.

	* Documentation/user/refman.itely (Point and click):  updates.
	(Graphical interfaces): add node
	(Vertical spacing): add node

2002-07-24  Jan Nieuwenhuizen  <janneke@gnu.org>

	* lily, lily/include: Rename line to system.  Junk _l suffix.

2002-07-24  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* po/fr.po: update from TP.

	* buildscripts/lilypond-profile.sh: update support for
	LILYPONDPREFIX

2002-07-24  Jan Nieuwenhuizen  <janneke@gnu.org>

	* Documentation/user/refman.itely (Point and click): Add info
	about GVim, NEdit.

2002-07-24  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* lily/accidental-placement.cc (extent_callback): remove function
	(position_accidentals): do nothing if not live.
	Use accidental-grobs property i.s.o. accidentals, to maintain
	proper typing. 

2002-07-24  Jan Nieuwenhuizen  <janneke@gnu.org>

	* input/mutopia/J.S.Bach/baerenreiter-sarabande.ly: *
	input/test/count-systems.ly: Update to new system-count function
	names.

	* lily/grob.cc (get_line, get_original): Use LY_DEFINE.

	* lily/spanner.cc (get_broken_into): Use LY_DEFINE.

	* lily/include/spanner.hh:
	* lily/include/grob.hh: Remove DECLARE_SCHEME_CALLBACKs.

	* input/mutopia/J.S.Bach/baerenreiter-sarabande.ly: Add
	forcedBreak options and fix measure count comments.

	* GNUmakefile.in: Junk intl.

	* config.make.in (prefix): Prepend $(DESTDIR) to allow install
	without overriding prefix.

	* aclocal.m4: Regenerate.
	
	* stepmake/aclocal.m4: Don't expand $prefix: fixes install with
	other $prefix.

	* cygwin/GNUmakefile: 
	* ly/GNUmakefile: 
	* python/GNUmakefile: 
	* make/GNUmakefile: 
	* mf/GNUmakefile: 
	* scm/GNUmakefile:
	* tex/GNUmakefile: use local_package_datadir iso datadir.

	* make/substitute.make (ATVARIABLES): Add local_lilypond_datadir.

	* aclocal.m4: Regenerate.
	
	* config.hh.in:
	* config.make.in:
	* stepmake/aclocal.m4: Cleanups and more conventional naming for